[package]
name = "tm4c129x-hal"
version = "0.6.1"
authors = [
	"Jorge Aparicio <jorge@japaric.io>",
	"Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
	"Marc Poulhiès <dkm@kataplop.net>",
    "David Wood <code@dtwood.co.uk>",
]
description = "HAL for the TM4C129x family of microcontrollers"
keywords = ["arm", "cortex-m", "tm4c", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtwood/tm4c129x-hal"
edition = "2018"

[dependencies.cast]
version = "0.2.2"
default-features = false

[dependencies.cortex-m]
version = "0.5.2"

[dependencies.embedded-hal]
version = "0.2.2"
features = ["unproven"]

[dependencies.nb]
version = "0.1"

[dependencies.tm4c129x]
version = "0.7"

[dependencies.void]
version = "1.0"
default-features = false

[features]
rt = ["tm4c129x/rt"]
