[package]
name = "tm4c129x-hal"
version = "0.9.0"
authors = [
	"Jorge Aparicio <jorge@japaric.io>",
	"Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
	"Marc Poulhiès <dkm@kataplop.net>",
	"David Wood <code@dtwood.co.uk>",
]
description = "HAL for the TM4C129x family of microcontrollers"
keywords = ["arm", "cortex-m", "tm4c", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/thejpster/tm4c-hal/tm4c129x-hal"
edition = "2018"

[dependencies]
bare-metal = "0.2.4"
cortex-m = "0.6"
nb = "0.1"
tm4c129x = "0.9"

[dependencies.byteorder]
version = "1"
default-features = false

[dependencies.cast]
version = "0.2"
default-features = false

[dependencies.embedded-hal]
version = "0.2"
features = ["unproven"]

[dependencies.smoltcp]
version = "0.6"
default_features = false
features = [
    "proto-ipv4",
    "proto-ipv6",
    "socket-raw",
    "socket-udp",
    "socket-tcp",
]

[dependencies.void]
version = "1.0"
default-features = false

[dependencies.tm4c-hal]
version = "0.3.0"
path = "../tm4c-hal"

[dependencies.vcell]
version = "0.1.0"
features = ["const-fn"]

[features]
rt = ["tm4c129x/rt"]
