[package]
name = "tm4c129x-hal"
version = "0.9.2"
authors = [
	"Jorge Aparicio <jorge@japaric.io>",
	"Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
	"Marc Poulhiès <dkm@kataplop.net>",
	"David Wood <code@dtwood.co.uk>",
]
description = "HAL for the TM4C129x family of microcontrollers"
keywords = ["arm", "cortex-m", "tm4c", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-embedded-community/tm4c-hal/tm4c129x-hal"
edition = "2018"

[dependencies]
cortex-m = "0.6"
nb = "1"

[dependencies.tm4c129x]
## m-labs does not plan on publishing new release on crates.io and suggest to
## use git instead with specific revision instead.
git = "https://github.com/m-labs/dslite2svd.git"
rev = "30145706b658136c35c90290701de3f02a4b8ef2"

[dependencies.cast]
version = "0.2"
default-features = false

[dependencies.embedded-hal]
version = "0.2"
features = ["unproven"]

[dependencies.void]
version = "1.0"
default-features = false

[dependencies.tm4c-hal]
version = "0.4.1"
path = "../tm4c-hal"

[features]
rt = ["tm4c129x/rt"]
