[package]
name = "tm4c129x-hal"
version = "0.9.3"
authors = [
	"Jorge Aparicio <jorge@japaric.io>",
	"Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
	"Marc Poulhiès <dkm@kataplop.net>",
	"David Wood <code@dtwood.co.uk>",
]
description = "HAL for the TM4C129x family of microcontrollers"
keywords = ["arm", "cortex-m", "tm4c", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-embedded-community/tm4c-hal/tm4c129x-hal"
edition = "2018"

[dependencies]
cortex-m = "0.7"
nb = "1"

[dependencies.tm4c129x]
version = "0.9.1"

[dependencies.cast]
version = "0.2"
default-features = false

[dependencies.embedded-hal]
version = "0.2"
features = ["unproven"]

[dependencies.void]
version = "1.0"
default-features = false

[dependencies.tm4c-hal]
version = "0.4.1"
path = "../tm4c-hal"

[features]
rt = ["tm4c129x/rt"]
