[package]
authors = [
	"Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
]
edition = "2018"
readme = "README.md"
name = "tiva-c-connected-launchpad"
version = "0.1.0"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"

[dependencies.tm4c129x-hal]
# version = "0.7.0"
path = "../../tm4c129x-hal"
features = ["rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "tiva-c-connected-launchpad"
test = false
bench = false
